--- a/LanguageSchool/Views/Message/Create.cshtml
+++ b/LanguageSchool/Views/Message/Create.cshtml
@@ -10,12 +10,30 @@
     @Html.AntiForgeryToken()
 
     <div class="container">
-        <div class="row col-md-12">
-            <div class="thumbnail col-md-2">
-                <input type="submit" value="Wyślij" class="btn btn-block btn-default" />
-            </div>
-        </div>
+        @{ Html.RenderPartial("_PartHeader", "Wyślij komunikat"); }
         <div class="row form-horizontal thumbnail col-md-12">
+            <div class="col-md-6">
+                <div class="form-group">
+                    <div class="control-label col-md-4">
+                        <strong>Temat</strong>
+                    </div>
+                    <div class="col-md-8">
+                        @Html.EditorFor(model => model.Topic, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.Topic, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="control-label col-md-4">
+                        <strong>Systemowy</strong>
+                    </div>
+                    <div class="col-md-8">
+                        <div class="checkbox">
+                            @Html.EditorFor(model => model.IsSystem)
+                            @Html.ValidationMessageFor(model => model.IsSystem, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+                </div>
+            </div>
             <div class="col-md-6">
                 <div class="form-group">
                     <div class="control-label col-md-4">
@@ -74,36 +92,19 @@
                     }
                 </script>
             </div>
-            <div class="col-md-6">
                 <div class="form-group">
-                    <div class="control-label col-md-4">
-                        <strong>Temat</strong>
-                    </div>
-                    <div class="col-md-8">
-                        @Html.EditorFor(model => model.Topic, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.Topic, "", new { @class = "text-danger" })
-                    </div>
-                </div>
-                <div class="form-group">
-                    <div class="control-label col-md-4">
-                        <strong>Systemowy</strong>
-                    </div>
-                    <div class="col-md-8">
-                        <div class="checkbox">
-                            @Html.EditorFor(model => model.IsSystem)
-                            @Html.ValidationMessageFor(model => model.IsSystem, "", new { @class = "text-danger" })
-                        </div>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <div class="control-label col-md-4">
+                    <div class="control-label col-md-2">
                         <strong>Treść</strong>
                     </div>
-                    <div class="col-md-8">
-                        @Html.EditorFor(model => model.Contents, new { htmlAttributes = new { @class = "form-control" } })
+                    <div class="col-md-10">
+                        @Html.EditorFor(model => model.Contents, new { htmlAttributes = new { @class = "widetextarea", @style = "width:830px;height:300px" } })
                         @Html.ValidationMessageFor(model => model.Contents, "", new { @class = "text-danger" })
                     </div>
                 </div>
+        </div>
+        <div class="row col-md-12">
+            <div class="col-md-2 col-md-offset-10">
+                <input type="submit" value="Wyślij" class="btn btn-block btn-default" />
             </div>
         </div>
     </div>
