--- a/LanguageSchool/Views/Message/Details.cshtml
+++ b/LanguageSchool/Views/Message/Details.cshtml
@@ -7,15 +7,6 @@
 
 
 <div class="container">
-    @if (!@Model.IsSystem)
-    {
-        <div class="row col-md-12">
-            <div class="thumbnail col-md-3">
-                <button class="btn btn-block btn-danger" type="button" data-toggle="modal" data-target="#myModal">Usuń</button>
-            </div>
-        </div>
-    }
-
     <div class="row thumbnail">
         <dl class="dl-horizontal">
             <dt>
@@ -51,6 +42,15 @@
             </dd>
         </dl>
     </div>
+
+    @if (!@Model.IsSystem)
+    {
+        <div class="row col-md-12">
+            <div class="col-md-2 col-md-offset-10">
+                <button class="btn btn-block btn-danger" type="button" data-toggle="modal" data-target="#myModal">Usuń</button>
+            </div>
+        </div>
+    }
 
     @using (Html.BeginForm())
     {
