--- a/LanguageSchool/Views/Group/Details.cshtml
+++ b/LanguageSchool/Views/Group/Details.cshtml
@@ -60,13 +60,13 @@
             <table class="table table-striped table-bordered">
                 <tr>
                     <th>
-                        Dodano
+                        Zapisano
                     </th>
                     <th>
-                        Nazwa użytkownika
+                        Student
                     </th>
                     <th>
-                        Email
+                        Adres email
                     </th>
                     <th>
                         Numer telefonu
@@ -94,8 +94,11 @@
     </div>
     @if (Model.Tests.Any())
     {
-        <div class="row">
-            <div class="thumbnail col-md-7 col-md-offset-1">
+        <div class="row col-md-11">
+            <div class="thumbnail col-md-12">
+                <strong>Testy utworzone dla grupy</strong>
+            </div>
+            <div class="thumbnail col-md-12">
                 <table class="table table-striped table-bordered">
                     <tr>
                         <th>
@@ -115,7 +118,7 @@
                         </th>
                     </tr>
                     @foreach (var test in Model.Tests)
-                    {   
+                    {
                         <tr>
                             <td>
                                 @test.CreationDate.ToString("yyyy/MM/dd")
