Zmiana koloru nagłówka na bardziej czytelny

--- a/LanguageSchool/Views/Shared/_PartHeader.cshtml
+++ b/LanguageSchool/Views/Shared/_PartHeader.cshtml
@@ -2,6 +2,6 @@
 
 <div class="row col-md-12">
     <div class="col-md-12">
-        <font size="4" color="steelblue"><strong>@Model</strong></font>
+        <font size="4" color="Orange"><strong>@Model</strong></font>
     </div>
 </div>
