--- a/LanguageSchool/Views/Course/List.cshtml
+++ b/LanguageSchool/Views/Course/List.cshtml
@@ -66,7 +66,7 @@
                     )
                 </th>
                 <th>
-                    @Html.ActionLink("Nazwa", "List",
+                    @Html.ActionLink("Nazwa kursu", "List",
                         new
                         {
                             showActivated = ViewBag.showActivated,
