--- a/LanguageSchool/Views/Course/Create.cshtml
+++ b/LanguageSchool/Views/Course/Create.cshtml
@@ -9,12 +9,7 @@
 {
     @Html.AntiForgeryToken()
     <div class="container">
-        <div class="row col-md-12">
-            <div class="thumbnail col-md-2">
-                <input type="submit" value="Utwórz" class="btn btn-block btn-default" />
-            </div>
-        </div>
-
+        @{ Html.RenderPartial("_PartHeader", "Utwórz kurs"); }
         <div class="row form-horizontal thumbnail col-md-12">
             <div class="row form-group">
                 <div class="control-label col-md-2">
@@ -81,6 +76,11 @@
                     @Html.EditorFor(model => model.Description, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
                 </div>
+            </div>
+        </div>
+        <div class="row col-md-12">
+            <div class="col-md-2 col-md-offset-10">
+                <input type="submit" value="Utwórz" class="btn btn-block btn-default" />
             </div>
         </div>
     </div>
