--- a/LanguageSchool/Views/Test/Create.cshtml
+++ b/LanguageSchool/Views/Test/Create.cshtml
@@ -5,41 +5,18 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
+    @Html.HiddenFor(model => model.GroupId)
+
     @Html.AntiForgeryToken()
 
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
     <div class="container">
-        <div class="row col-md-12">
-            <div class="thumbnail col-md-2">
-                <input type="submit" value="Utwórz" class="btn btn-block btn-default" />
-            </div>
-        </div>
-
+        @{ Html.RenderPartial("_PartHeader", "Utwórz test dla grupy"); }
         <div class="row col-md-12 thumbnail">
             <div class="row">
-                <div class="form-group col-md-4">
-                    <div class="control-label col-md-5">
-                        <strong>Punkty</strong>
-                    </div>
-                    <div class="col-md-4">
-                        @Html.EditorFor(model => model.Points, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.Points, "", new { @class = "text-danger" })
-                    </div>
-                </div>
-
-                <div class="form-group col-md-4">
-                    <div class="control-label col-md-5">
-                        <strong>Liczba pytań</strong>
-                    </div>
-                    <div class="col-md-4">
-                        @Html.EditorFor(model => model.NumberOfQuestions, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.NumberOfQuestions, "", new { @class = "text-danger" })
-                    </div>
-                </div>
-
                 <div class="col-md-4">
                     <div class="control-label col-md-2">
                         <strong>Nazwa</strong>
@@ -49,9 +26,29 @@
                         @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
                     </div>
                 </div>
+                <div class="form-group col-md-4">
+                    <div class="control-label col-md-5">
+                        <strong>Aktywny</strong>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="checkbox">
+                            @Html.EditorFor(model => model.IsActive)
+                            @Html.ValidationMessageFor(model => model.IsActive, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+                </div>
             </div>
 
             <div class="row">
+                <div class="col-md-4">
+                    <div class="control-label col-md-2">
+                        <strong>Opis</strong>
+                    </div>
+                    <div class="col-md-10">
+                        @Html.EditorFor(model => model.Comment, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.Comment, "", new { @class = "text-danger" })
+                    </div>
+                </div>
                 <div class="form-group col-md-4">
                     <div class="control-label col-md-5">
                         <strong>Liczba pytań otwartych</strong>
@@ -70,18 +67,9 @@
                         @Html.ValidationMessageFor(model => model.NumberOfClosedQuestions, "", new { @class = "text-danger" })
                     </div>
                 </div>
-                <div class="col-md-4">
-                    <div class="control-label col-md-2">
-                        <strong>Opis</strong>
-                    </div>
-                    <div class="col-md-10">
-                        @Html.EditorFor(model => model.Comment, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.Comment, "", new { @class = "text-danger" })
-                    </div>
-                </div>
             </div>
         </div>
-
+        @{ Html.RenderPartial("_PartHeader", "Wybierz tematy dla testu"); }
         <div class="row thumbnail col-md-12">
             <table class="table table-striped table-bordered">
                 <tr>
@@ -91,9 +79,13 @@
                     <th>
                         Opis
                     </th>
+                    <th>
+                        Wybrano
+                    </th>
                 </tr>
                 @for (var i = 0; i < Model.LessonSubjects.Count; i++)
                 {
+                    @Html.HiddenFor(model => model.LessonSubjects[i].Id)
                     <tr>
                         <td>
                             @Model.LessonSubjects[i].Name
@@ -109,6 +101,11 @@
                     </tr>
                 }
             </table>
+        </div>
+        <div class="row col-md-12">
+            <div class="col-md-2 col-md-offset-10">
+                <input type="submit" value="Utwórz" class="btn btn-block btn-default" />
+            </div>
         </div>
     </div>
 }
