--- a/LanguageSchool/Views/Group/Details.cshtml
+++ b/LanguageSchool/Views/Group/Details.cshtml
@@ -6,21 +6,21 @@
 }
 
 <div class="container">
-    <div class="row col-md-12">
-        <div class="thumbnail col-md-4">
+    <div class="row">
+        <div class="bordered col-md-4">
             <button class="btn btn-block btn-default" type="button" onclick="location.href='@Url.Action("Create", "LessonSubject", new { id = Model.GroupId})'">Dodaj nowy temat</button>
         </div>
     </div>
-    <div class="row col-md-12">
-        <div class="thumbnail col-md-4">
+    <div class="row">
+        <div class="bordered col-md-4">
             <strong>Tematy</strong>
         </div>
-        <div class="thumbnail col-md-7 col-md-offset-1">
+        <div class="bordered col-md-7 col-md-offset-1">
             <strong>Uczestnicy</strong>
         </div>
     </div>
-    <div class="row col-md-12">
-        <div class="thumbnail col-md-4">
+    <div class="row">
+        <div class="bordered col-md-4">
             <table class="table table-striped table-bordered">
                 <tr>
                     <th>
@@ -56,7 +56,7 @@
                 }
             </table>
         </div>
-        <div class="thumbnail col-md-7 col-md-offset-1">
+        <div class="bordered col-md-7 col-md-offset-1">
             <table class="table table-striped table-bordered">
                 <tr>
                     <th>
@@ -94,11 +94,11 @@
     </div>
     @if (Model.Tests.Any())
     {
-        <div class="row col-md-11">
-            <div class="thumbnail col-md-12">
+        <div class="row">
+            <div class="bordered col-md-12">
                 <strong>Testy utworzone dla grupy</strong>
             </div>
-            <div class="thumbnail col-md-12">
+            <div class="bordered col-md-12">
                 <table class="table table-striped table-bordered">
                     <tr>
                         <th>
@@ -119,7 +119,14 @@
                     </tr>
                     @foreach (var test in Model.Tests)
                     {
-                        <tr>
+                        var fontColor = "black";
+
+                        if (!test.IsActive)
+                        {
+                            fontColor = "silver";
+                        }
+
+                        <tr style="color: @fontColor">
                             <td>
                                 @test.CreationDate.ToString("yyyy/MM/dd")
                             </td>
