--- a/LanguageSchool/Views/Shared/_PartHeader.cshtml
+++ b/LanguageSchool/Views/Shared/_PartHeader.cshtml
@@ -1,7 +1,7 @@
 ﻿@model string 
 
-<div class="row col-md-12">
-    <div class="col-md-12">
-        <font size="4" color="Orange"><strong>@Model</strong></font>
+<div class="row">
+    <div class="bordered">
+        <font size="3"><strong>@Model</strong></font>
     </div>
 </div>
